--- a/DRRadiov3/res/layout/udsendelse_elem0_top.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem0_top.xml
@@ -15,16 +15,29 @@
             layout="@layout/inkl_billede_med_titeloverlaegning"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:orientation="horizontal">
 
     <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="0dp"
             android:src="@drawable/skrald__kanallogo_p3"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"/>
+     <TextView
+        android:id="@+id/p4navn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nordjylland"
+        android:textStyle="bold"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"/>
+    </LinearLayout>
 
     <LinearLayout
             android:layout_width="match_parent"
