--- a/DRRadiov3/res/layout/afspiller_levendeikon.xml
+++ b/DRRadiov3/res/layout/afspiller_levendeikon.xml
@@ -4,8 +4,31 @@
               android:id="@+id/yderstelayout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@drawable/widget_baggrund"
-        >
+              android:orientation="vertical"
+              android:background="@android:color/darker_gray">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal"
+        android:paddingBottom="1dp"
+        android:background="@drawable/border_bottom">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dr_logo"
+            />
+        <TextView
+            android:layout_width="0px"
+            android:layout_weight="1"
+            android:text=""
+            android:layout_height="wrap_content"/>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal">
 
     <ImageButton
             android:layout_width="44dp"
@@ -13,18 +36,19 @@
             android:id="@+id/startStopKnap"
             android:src="@drawable/afspiller_spil"
             android:layout_gravity="center_vertical"
+            android:layout_marginRight="15dp"
             android:background="#00000000"
             />
 
 
-    <LinearLayout
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="8dp"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
-        <TextView
+            <TextView
                 android:id="@+id/titel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -33,58 +57,32 @@
                 android:textStyle="bold"
                 android:maxLines="2"
                 tools:ignore="HardcodedText"
-                android:textColor="@color/hvid"/>
+                android:textColor="@color/sort"/>
 
-        <TextView
+            <TextView
                 android:id="@+id/metainformation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="P3"
                 android:singleLine="true"
                 tools:ignore="HardcodedText"
-                android:textColor="@color/sort"/>
+                android:textColor="@color/grå05x"/>
 
-    </LinearLayout>
-
-
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-        <TextView
-                android:layout_width="0px"
-                android:layout_weight="1"
-                android:text=""
-                android:layout_height="wrap_content"/>
-
-        <!-- fix for http://code.google.com/p/android/issues/detail?id=11040 :
-          ProgressBar's synlighed kan ikke ændres direkte, man er nødt til at indlejre den
-          i f.eks. et LinearLayout -->
-        <LinearLayout
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:visibility="visible"
-                >
-
-            <ProgressBar
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
         </LinearLayout>
-
-
-        <ImageView
+        <LinearLayout
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:visibility="visible"
+            >
+            <ProgressBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/dr_logo"
                 />
-
+        </LinearLayout>
     </LinearLayout>
+
+
 
 </LinearLayout>
