--- a/DRRadiov3/res/layout/afspiller_notifikation_stor.xml
+++ b/DRRadiov3/res/layout/afspiller_notifikation_stor.xml
@@ -10,68 +10,78 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
+            android:gravity="top"
             android:orientation="horizontal">
 
 
-        <TextView
-                android:id="@+id/titel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="P3 Live"
-                android:layout_marginLeft="12dp"
-                android:textStyle="bold"
-                android:maxLines="2"
-                tools:ignore="HardcodedText"
-                android:textColor="@color/hvid"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitStart"
+            android:src="@drawable/dr_logo"/>
+
 
         <ImageView
                 android:id="@+id/luk"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
+                android:layout_width="fill_parent"
+                android:layout_height="24dp"
+                android:layout_gravity="right"
                 android:src="@drawable/dri_luk_hvid"/>
     </LinearLayout>
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical|right"
+            android:gravity="left"
             android:orientation="horizontal">
+        <LinearLayout
 
-
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="fitStart"
-                android:src="@drawable/dr_logo"/>
-
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:orientation="vertical"
+            android:layout_width="wrap_content">
+        <TextView
+            android:id="@+id/titel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="P3 Live"
+            android:layout_marginLeft="12dp"
+            android:textStyle="bold"
+            android:maxLines="2"
+            tools:ignore="HardcodedText"
+            android:textColor="@color/hvid"/>
 
         <TextView
                 android:id="@+id/metainformation"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginLeft="12dp"
                 android:text="P3"
                 android:singleLine="true"
                 tools:ignore="HardcodedText"/>
-
-
+        </LinearLayout>
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:orientation="horizontal"
+            android:layout_width="fill_parent">
         <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                />
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            />
 
         <ImageView
-                android:id="@+id/startStopKnap"
-                android:layout_width="60dp"
-                android:layout_height="44dp"
-                android:layout_gravity="right"
-                android:scaleType="center"
-                android:src="@drawable/afspiller_spil"/>
-
+            android:id="@+id/startStopKnap"
+            android:layout_width="60dp"
+            android:layout_height="44dp"
+            android:layout_gravity="right"
+            android:scaleType="center"
+            android:src="@drawable/afspiller_spil"/>
+        </LinearLayout>
     </LinearLayout>
+
 
 </LinearLayout>
