--- a/DRRadiov3/res/values/SKAL_IKKE_I_SVN.xml
+++ b/DRRadiov3/res/values/SKAL_IKKE_I_SVN.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- til Akamais statistik - den rigtige nøgle skal ikke comittes til SVN -->
-    <string name="akamai_konfiguratio"></string>
+    <string name="akamai_konfiguration"></string>
 
     <!-- Indsæt din egen BugSense-nøgle her -->
     <string name="bugsense_nøgle">00000000</string>
