--- a/DRRadiov3/res/layout/kanal_nyheder_frag.xml
+++ b/DRRadiov3/res/layout/kanal_nyheder_frag.xml
@@ -14,7 +14,7 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:id="@+id/billede"
-                android:src="@drawable/dri_lyd2_graa40"/>
+                android:src="@drawable/dri_lyd2_black"/>
 
 
 
