--- a/DRRadiov3/res/layout/afspiller_notifikation_stor.xml
+++ b/DRRadiov3/res/layout/afspiller_notifikation_stor.xml
@@ -32,9 +32,16 @@
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:gravity="left"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_height="44dp">
+        <ImageView
+            android:id="@+id/startStopKnap"
+            android:layout_width="60dp"
+            android:layout_height="44dp"
+            android:layout_gravity="right"
+            android:scaleType="center"
+            android:src="@drawable/afspiller_spil"/>
         <LinearLayout
 
             android:layout_height="wrap_content"
@@ -74,13 +81,7 @@
             android:layout_height="match_parent"
             />
 
-        <ImageView
-            android:id="@+id/startStopKnap"
-            android:layout_width="60dp"
-            android:layout_height="44dp"
-            android:layout_gravity="right"
-            android:scaleType="center"
-            android:src="@drawable/afspiller_spil"/>
+
         </LinearLayout>
     </LinearLayout>
 
