Har opdateret notifikations-afspilleren. Nu aligner play-ikonet med resten af android ikonerne

--- a/DRRadiov3/res/layout/afspiller_notifikation_stor.xml
+++ b/DRRadiov3/res/layout/afspiller_notifikation_stor.xml
@@ -41,6 +41,7 @@
             android:layout_height="44dp"
             android:layout_gravity="right"
             android:scaleType="center"
+            android:layout_marginLeft="3dp"
             android:src="@drawable/afspiller_spil"/>
         <LinearLayout
 
