--- a/DRRadiov3/res/layout/kanal_nyheder_frag.xml
+++ b/DRRadiov3/res/layout/kanal_nyheder_frag.xml
@@ -10,9 +10,10 @@
 
     <ImageView
             android:layout_width="196dp"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
             android:id="@+id/billede"
+        android:layout_height="0dp"
+        android:layout_weight=".30"
+        android:scaleType="centerInside"
             android:src="@drawable/dri_lyd2_black"/>
 
 
