--- a/DRRadiov3/res/xml/indstillinger.xml
+++ b/DRRadiov3/res/xml/indstillinger.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-
+<!--
     <CheckBoxPreference
             android:key="startAfspilningMedDetSammme"
             android:title="Start automatisk"
             android:defaultValue="false"
             android:summary="Start afspilning automatisk, når appen åbnes"/>
-
+-->
     <ListPreference
             android:key="lydkvalitet"
             android:title="Lydkvalitet"
@@ -39,10 +39,11 @@
             android:defaultValue="true"
             android:summary="Reagér på knapper på fjernbetjening (f.eks. på Bluetooth headset)"/>
 
-
     <CheckBoxPreference
             android:key="udviklerEkstra" android:title="Udvikler"
-            android:defaultValue="false" android:summaryOff=""
-            android:summaryOn="Vis ekstra muligheder til udviklere og fejlfinding."/>
+            android:defaultValue="false"
+            android:summaryOff="Vis ekstra muligheder til udviklere og fejlfinding."
+            android:summaryOn="Ekstra muligheder til udviklere og fejlfinding vises herunder (kræver at du åbner indstillingerne igen)"
+            />
 
 </PreferenceScreen>
