--- a/DRRadiov3/res/xml/indstillinger.xml
+++ b/DRRadiov3/res/xml/indstillinger.xml
@@ -43,6 +43,7 @@
     <ListPreference
             android:key="placeringAfHentedeFiler"
             android:title="Hentede udsendelser"
+            android:dialogTitle="Gem udsendelser på"
             android:summary="Vælg hvor på telefonen du vil gemme udsendelser, du henter ned til offline brug."
             />
 
