--- a/DRRadiov3/res/layout/kanal_nyheder_frag.xml
+++ b/DRRadiov3/res/layout/kanal_nyheder_frag.xml
@@ -44,7 +44,7 @@
             android:paddingLeft="4dp"
             android:paddingRight="16dp"
             android:drawableLeft="@drawable/dri_lyd_hvid"
-            android:text=" HØR P3 LIVE"
+            android:text=" HØR DR NYHEDER LIVE"
             android:textColor="@color/hvid"
             android:background="@drawable/knap_blaa_bg"/>
 
