--- a/DRRadiov3/res/layout/udsendelse_elem3_playlisteelem.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem3_playlisteelem.xml
@@ -59,7 +59,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/hør"
-                android:src="@drawable/dri_lyd_blaa"/>
+                android:src="@drawable/dri_lyd_blaa"
+                tools:ignore="ContentDescription"/>
     </LinearLayout>
 
 
