--- a/DRRadiov3/res/layout-land/kanal_elem0_aktuel_udsendelse.xml
+++ b/DRRadiov3/res/layout-land/kanal_elem0_aktuel_udsendelse.xml
@@ -107,7 +107,8 @@
                     android:layout_height="60dp"
                     android:adjustViewBounds="true"
                     android:id="@+id/senest_spillet_kunstnerbillede"
-                    android:src="@drawable/eksempel_kunstner"/>
+                    android:src="@drawable/eksempel_kunstner"
+                    tools:ignore="ContentDescription"/>
 
 
             <LinearLayout
