--- a/DRRadiov3/res/layout/afspiller_levendeikon.xml
+++ b/DRRadiov3/res/layout/afspiller_levendeikon.xml
@@ -17,6 +17,7 @@
         <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="D R"
                 android:src="@drawable/dr_logo"
                 />
 
@@ -37,9 +38,9 @@
                 android:layout_width="44dp"
                 android:layout_height="44dp"
                 android:id="@+id/startStopKnap"
+                android:contentDescription="start/stop"
                 android:src="@android:drawable/ic_media_play"
                 android:layout_gravity="center_vertical"
-
                 android:background="@android:color/darker_gray"
                 />
 
