--- a/DRRadiov3/res/layout/afspiller_notifikation_lille_skrald.xml
+++ b/DRRadiov3/res/layout/afspiller_notifikation_lille_skrald.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:id="@+id/yderstelayout"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -12,7 +13,8 @@
             android:layout_alignParentLeft="true"
             android:scaleType="center"
             android:src="@drawable/dr_logo"
-            android:visibility="visible"/>
+            android:visibility="visible"
+            tools:ignore="ContentDescription"/>
 
     <LinearLayout
             android:layout_width="0px"
@@ -50,12 +52,14 @@
 
     <ImageView
             android:id="@+id/startStopKnap"
+            android:contentDescription="start/stop"
             android:layout_width="60dp"
             android:layout_height="44dp"
             android:src="@drawable/afspiller_spil"/>
 
     <ImageView
             android:id="@+id/luk"
+            android:contentDescription="luk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
