--- a/DRRadiov3/res/layout/afspiller_notifikation_stor.xml
+++ b/DRRadiov3/res/layout/afspiller_notifikation_stor.xml
@@ -18,11 +18,13 @@
                 android:layout_height="44dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
+                tools:ignore="ContentDescription"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_dr_icon"/>
 
         <ImageView
                 android:id="@+id/startStopKnap"
+                android:contentDescription="start/stop"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
@@ -79,6 +81,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_gravity="center_vertical"
                     android:layout_alignParentRight="true"
+                    android:contentDescription="Luk D R Radio"
                     android:src="@drawable/ic_action_cancel"/>
 
 
