--- a/DRRadiov3/res/layout/inkl_billede_med_titeloverlaegning.xml
+++ b/DRRadiov3/res/layout/inkl_billede_med_titeloverlaegning.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:paddingTop="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
@@ -14,7 +15,8 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:id="@+id/billede"
-            android:src="@drawable/eksempel_udsendelse"/>
+            android:src="@drawable/eksempel_udsendelse"
+            tools:ignore="ContentDescription"/>
 
     <!--
         <ImageButton
