--- a/DRRadiov3/res/layout/kanal_nyheder_frag.xml
+++ b/DRRadiov3/res/layout/kanal_nyheder_frag.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -14,7 +15,8 @@
         android:layout_height="0dp"
         android:layout_weight=".30"
         android:scaleType="centerInside"
-            android:src="@drawable/dri_lyd2_black"/>
+            android:src="@drawable/dri_lyd2_black"
+            tools:ignore="ContentDescription"/>
 
 
     <TextView
@@ -45,6 +47,7 @@
             android:paddingRight="16dp"
             android:drawableLeft="@drawable/dri_lyd_hvid"
             android:text=" HØR DR NYHEDER LIVE"
+            android:contentDescription="hør D R nyheder live"
             android:textColor="@color/hvid"
             android:background="@drawable/knap_blaa_bg"/>
 
