--- a/DRRadiov3/res/layout/soeg_efter_program_frag.xml
+++ b/DRRadiov3/res/layout/soeg_efter_program_frag.xml
@@ -29,6 +29,7 @@
                     android:layout_height="44dp"
                     android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
+                    android:contentDescription="ryd"
                     android:scaleType="center"
                 android:src="@drawable/dri_soeg_blaa" />
         </RelativeLayout>
