--- a/DRRadiov3/res/layout/udsendelse_elem5_vis_hele_playlisten_knap.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem5_vis_hele_playlisten_knap.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="VIS HELE PLAYLISTEN"
+        android:contentDescription="vis hele playlisten"
         android:textColor="@color/hvid"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
