--- a/DRRadiov3/res/layout/venstremenu_elem_soeg.xml
+++ b/DRRadiov3/res/layout/venstremenu_elem_soeg.xml
@@ -1,5 +1,6 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:paddingLeft="16dp"
@@ -19,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:paddingLeft="16dp"
-            android:src="@drawable/dri_soeg_blaa"/>
+            android:src="@drawable/dri_soeg_blaa"
+            tools:ignore="ContentDescription"/>
 
 </LinearLayout>
